styles/style.css
@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto+Condensed&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&display=swap");

html {
  --main-red: #ff3b29;
}

* {
  margin: 0;
  padding: 0;
  font-family: "Roboto Condensed", sans-serif;
  outline: none;
}

body {
  height: 200vh;
}

/* Mobile-first styling START */
nav {
  position: fixed;
  z-index: 999;
  top: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: var(--main-red);
  color: white;
  height: 70px;
  width: 100%;
  transition: box-shadow 500ms ease-in-out;
}

.scrolling-active {
  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.3);
}

nav h1 a {
  margin-left: 1rem;
  font-family: "Bebas Neue", cursive;
  font-size: 2rem;
  text-decoration: none;
  color: white;
}

.nav-bar ul {
  display: none;
}

.mobile-overlay {
  height: 0;
  width: 100%;
  position: fixed;
  z-index: 999;
  top: 0;
  left: 0;
  background-color: var(--main-red);
  overflow: hidden;
  transition: 600ms;
}

.mobile-overlay .overlay-content {
  position: relative;
  /* top: 20%; */
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.mobile-overlay img {
  position: absolute;
  opacity: 0.1;
  z-index: -1;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
}

.mobile-overlay .overlay-content a {
  color: white;
  text-decoration: none;
  margin-bottom: 2rem;
  font-size: 1.6rem;
}

main .top-section {
  display: grid;
  grid: 1fr / 1fr;
  grid-template-areas:
    "first"
    "second";
}

main .top-section .first-half {
  height: 50vh;
  width: 100vw;
  background: var(--main-red);
  grid-area: first;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  color: white;
}

main .top-section .first-half h2 {
  font-family: "Playfair Display", serif;
  line-height: 1.5rem;
  font-size: 1.7rem;
  margin-top: 2rem;
  margin-bottom: 1rem;
}

main .top-section .first-half p {
  font-size: 1.1rem;
  padding: 0 2rem;
}

main .top-section .first-half .inner-container {
  text-align: center;
  margin: 0 2rem;
}

main .top-section .second-half {
  height: 50vh;
  width: 100vw;
  grid-area: second;
  position: relative;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
}

main .top-section .second-half img {
  height: 80%;
  width: 80%;
}

/* Mobile view bars */
.btn {
  padding: 1rem 0;
  cursor: pointer;
  margin-right: 2rem;
  position: fixed;
  right: 0;
  top: 15px;
  z-index: 99999;
}

.menu-bars,
.menu-bars::before,
.menu-bars::after {
  background: white;
  border-radius: 10px;
  box-shadow: 0 5px 20px rgba(0, 0, 0, 0.6);
}

.menu-bars {
  width: 35px;
  height: 5px;
  /* transition: transform 400ms ease-in-out, background 400ms ease-in-out; */
}

.btn.open .menu-bars {
  transform: translateX(-50px);
  background: transparent;
  box-shadow: 0 0 0 transparent;
}

.menu-bars::before,
.menu-bars::after {
  content: "";
  width: 35px;
  height: 5px;
  position: absolute;
}

.menu-bars::before {
  position: absolute;
  right: 0;
  width: 22px;
  transform: translateY(-12px);
  /* transition: width 400ms ease-in-out, transform 400ms ease-in-out; */
  opacity: 1;
}

.btn.open .menu-bars::before {
  transform: translateY(-12px);
  transform: translateX(50px) rotate(45deg);
}

.btn.open .menu-bars::before {
  width: 35px;
}

.menu-bars::after {
  transform: translateY(12px);
  /* transition: transform 400ms ease-in-out; */
}

.btn.open .menu-bars::after {
  transform: translateY(12px);
  transform: translateX(50px) rotate(-45deg);
}
/* Mobile View Bars END */

/* Mobile-first styling END */

/* Desktop Sizing START */
@media (min-width: 800px) {
  /* Navigation START */
  nav h1 a {
    font-size: 3.2rem;
  }

  .nav-bar ul {
    display: flex;
    display: none;
  }

  nav ul li {
    list-style: none;
    margin-right: 2rem;
    font-size: 1.1rem;
  }

  nav ul li a {
    text-decoration: none;
    color: white;
    transition: border-bottom 200ms ease;
    padding: 1.6rem 0;
    height: 77px;
    border-bottom: 4px solid transparent;
  }

  nav ul li a:hover {
    border-bottom: 4px solid white;
  }

  .mobile-overlay .overlay-content {
    /* border: 5px solid blue; */
    top: 40%;
    align-items: flex-start;
  }

  .mobile-overlay img {
    opacity: 0.3;
    max-width: 900px;
  }

  .mobile-overlay .overlay-content a {
    margin: 0 0 0.5rem 3rem;
    font-family: "Playfair Display", serif;
    font-size: 3rem;
    overflow: scroll;
    position: relative;
    transition: color 400ms ease-in-out;
  }

  .mobile-overlay .overlay-content a::before {
    content: "";
    width: 100%;
    height: 3px;
    background: transparent;
    position: absolute;
    bottom: 0px;
    transform: translateX(385px);
    transition: transform 300ms ease-in-out, background 300ms ease-in-out;
  }

  .mobile-overlay .overlay-content a:hover {
    color: black;
  }

  .mobile-overlay .overlay-content a:hover::before {
    transform: translateX(0);
    background: black;
  }

  .menu-bars {
    transition: transform 400ms ease-in-out, background 400ms ease-in-out;
  }

  .menu-bars::before {
    transition: width 400ms ease-in-out, transform 400ms ease-in-out;
  }

  .menu-bars::after {
    transition: transform 400ms ease-in-out;
  }
  /* Navigation END */

  /* Main Section Start */
  main .top-section {
    display: grid;
    grid: 1fr / 1fr 1fr;
    grid-template-areas: "first second";
  }

  main .top-section .first-half {
    height: 100vh;
    width: 55vw;
    background: var(--main-red);
    grid-area: "second";
    padding-top: 0;
    margin-top: 0;
  }

  main .top-section .first-half .inner-container {
    text-align: center;
    margin: 0 2rem;
  }

  main .top-section .second-half {
    height: 100vh;
    width: 45vw;
    background: white;
    grid-area: "first";
    position: relative;
  }

  main .top-section .second-half img {
    width: 90%;
    height: 90%;
  }

  main .top-section .first-half h2 {
    font-size: 2rem;
    line-height: 2rem;
  }

  main .top-section .first-half p {
    font-size: 1.3rem;
  }

  /* Main Section End */
}
/* Desktop Sizing END */

